--- a/src/libs/file_field/static/file_field/admin/css/file_widget.css
+++ b/src/libs/file_field/static/file_field/admin/css/file_widget.css
@@ -1,24 +1,28 @@
 .file-widget {
+    position: relative;
+    overflow: hidden;
     white-space: nowrap;
 }
 
 /* прячем оригинальное поле */
 .file-widget input {
     position: absolute;
-    left: -100%;
-    z-index: -2;
-    cursor: pointer;
+    top: 0;
+    left: -5000px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0;
     font-size: 0;
-    visibility: hidden;
+    cursor: pointer;
 }
 
 /* зеленая кнопка */
 .file-widget label {
     display: inline-block;
     position: relative;
-    overflow: hidden;
-    z-index: 2;
     cursor: pointer;
+    z-index: 1;
     text-align: left;
     vertical-align: middle;
 }
@@ -42,7 +46,7 @@
     position: relative;
     padding: 5px 7px 5px 12px;
     margin-left: -35px;
-    z-index: 1;
+    z-index: 0;
     vertical-align: middle;
     -webkit-border-radius: 0 7px 7px 0;
     -moz-border-radius: 0 7px 7px 0;
@@ -65,4 +69,35 @@
 
 .file-widget.has-link .preview {
     margin-left: -7px;
+}
+
+/* перетаскивание файла */
+.file-widget.dragover {
+    min-height: 130px;
+}
+.file-widget.dragover:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: rgba(160, 160, 160, 0.85);
+}
+.file-widget.dragover:after {
+    content: 'Drop files here';
+    position: absolute;
+    margin-top: -12px;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    z-index: 3;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-align: center;
+}
+.file-widget.dragover input {
+    left: 0;
+    z-index: 10;
 }
