--- a/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
+++ b/src/libs/stdimage/static/stdimage/admin/css/stdimage.css
@@ -5,14 +5,15 @@
 }
 
 .stdimage .input-file {
-    font-size: 0;
-    opacity: 0;
     position: absolute;
-    left: -5000px;
     top: 0;
+    left: -5000px;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: -1;
+    opacity: 0;
+    font-size: 0;
+    cursor: pointer;
 }
 
 .stdimage .btn i {
@@ -31,42 +32,34 @@
 
 
 /* Перетаскивание файла */
-.stdimage .dragover-content {
-    display: none;
+.stdimage.dragover {
+    min-height: 130px;
+}
+.stdimage.dragover:before {
+    content: '';
     position: absolute;
-    padding: 20px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
+    background-color: rgba(160, 160, 160, 0.85);
+}
+.stdimage.dragover:after {
+    content: 'Drop files here';
+    position: absolute;
+    margin-top: -12px;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    z-index: 3;
     color: #FFFFFF;
     font-size: 20px;
     text-align: center;
-    background-color: rgba(160, 160, 160, 0.85);
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.stdimage .dragover-content span {
-    vertical-align: middle;
-}
-.stdimage .dragover-content:after {
-    content: '';
-    display: inline-block;
-    height: 100%;
-    min-height: inherit;
-    vertical-align: middle;
-}
-
-.stdimage.dragover {
-    min-height: 130px;
-}
-.stdimage.dragover .dragover-content {
-    display: block;
 }
 .stdimage.dragover .input-file {
     left: 0;
+    z-index: 10;
 }
 
 
