--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -1,5 +1,14 @@
 @import 'mixins';
 
+/*
+  Упрощенный алиас для конструкции
+
+  <div class="grid">
+    <div class="gc">
+      ...
+    </div>
+  </div>
+*/
 .grid-block {
   display: block;
   margin: 0 auto;
@@ -25,7 +34,7 @@
   }
 }
 
-.gc {
+.gc, [class*="gc-"] {
   min-height: 1px;
   padding: 0 $grid_column_gap;
   @include border-box;
@@ -36,7 +45,6 @@
 @include media_interval($media1200, 0) {
   @for $index from 1 through $cols_wide - 1 {
     .gc-wide-#{$index} {
-      @extend .gc;
       float: left;
       width: (100% / $cols_wide) * $index;
     }
@@ -50,7 +58,6 @@
   }
 
   .gc-wide-full {
-    @extend .gc;
     width: 100%;
   }
 }
@@ -59,7 +66,6 @@
 @include media_interval($media1024, $media1200) {
   @for $index from 1 through $cols_desktop - 1 {
     .gc-#{$index} {
-      @extend .gc;
       float: left;
       width: (100% / $cols_desktop) * $index;
     }
@@ -73,7 +79,6 @@
   }
 
   .gc-full {
-    @extend .gc;
     width: 100%;
   }
 }
@@ -82,7 +87,6 @@
 @include media_interval($media768, $media1024) {
   @for $index from 1 through $cols_tablet - 1 {
     .gc-tablet-#{$index} {
-      @extend .gc;
       float: left;
       width: (100% / $cols_tablet) * $index;
     }
@@ -96,7 +100,6 @@
   }
 
   .gc-tablet-full {
-    @extend .gc;
     width: 100%;
   }
 }
@@ -105,7 +108,6 @@
 @include media_interval(0, $media768) {
   @for $index from 1 through $cols_mobile - 1 {
     .gc-mobile-#{$index} {
-      @extend .gc;
       float: left;
       width: (100% / $cols_mobile) * $index;
     }
@@ -119,7 +121,6 @@
   }
 
   .gc-mobile-full {
-    @extend .gc;
     width: 100%;
   }
 }
