--- a/src/static/scss/buttons.scss
+++ b/src/static/scss/buttons.scss
@@ -1,8 +1,9 @@
 @import "mixins";
 
 .btn {
-  position: relative;
   display: inline-block;
+  position: relative;
+  overflow: hidden;
   padding: 8px 20px;
   max-width: 100%;
   z-index: 1;
