--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -264,3 +264,49 @@
     line-height: 1.2;
     z-index: 10;
 }
+
+
+.edit-item-dialog input, .edit-item-dialog textarea {
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.edit-item-dialog input {
+    height: 32px;
+}
+
+.edit-item-dialog textarea {
+    max-height: 600px;
+}
+
+.edit-item-dialog .field {
+    margin-top: 4px;
+}
+
+.edit-item-dialog .field:first-child {
+    margin-top: 0;
+}
+
+.edit-item-dialog .invalid input, .edit-item-dialog .invalid textarea {
+    border-color: red;
+}
+
+.edit-item-dialog .ok-btn {
+    min-width: 68px;
+    color: white;
+    font-weight: bold;
+    background-color: #49afcd;
+    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
+    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
+    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
+    background-repeat: repeat-x;
+}
+
+.edit-item-dialog .ok-btn:hover {
+    background-image: -webkit-linear-gradient(top, #71b1d7, #4f9dce);
+    background-image: linear-gradient(to bottom, #71b1d7, #4f9dce)
+}
