--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -20,8 +20,7 @@
   var admin_gallery_delete_item = "{% url 'admin_gallery:delete_item' %}";
   var admin_gallery_rotate_item = "{% url 'admin_gallery:rotate_item' %}";
   var admin_gallery_crop_item = "{% url 'admin_gallery:crop_item' %}";
-  var admin_gallery_get_description = "{% url 'admin_gallery:get_description' %}";
-  var admin_gallery_set_description = "{% url 'admin_gallery:set_description' %}";
+  var admin_gallery_edit_item = "{% url 'admin_gallery:edit_item' %}";
 </script>
 
 {% block gallery %}
@@ -72,7 +71,7 @@
                title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
             <a class="icon-repeat item-rotate-right"
                title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
-            <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+            <a class="icon-pencil item-form" title="{% trans 'Edit item' %}"></a>
             <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
           </span>
         </div>
@@ -91,7 +90,7 @@
 
           <span class="item-controls">
             <input type="checkbox" class="check-box" value="">
-            <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+            <a class="icon-pencil item-form" title="{% trans 'Edit item' %}"></a>
             <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
           </span>
         </div>
