--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -37,7 +37,7 @@
           <a class="icon-repeat item-rotate-left"
              title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
           <a class="icon-repeat item-rotate-right" title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
-          <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+          <a class="icon-pencil item-form" title="{% trans 'Edit item' %}"></a>
           <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
         </span>
       </div>
@@ -51,7 +51,7 @@
 
         <span class="item-controls">
           <input type="checkbox" class="check-box" value="{{ item.id }}">
-          <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+          <a class="icon-pencil item-form" title="{% trans 'Edit item' %}"></a>
           <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
         </span>
       </div>
