--- a/src/apps_common/social_networks/templates/social_networks/admin/change_form.html
+++ b/src/apps_common/social_networks/templates/social_networks/admin/change_form.html
@@ -8,8 +8,7 @@
   {% if has_share_permission %}
     <li>
       <a href="javascript: void(0)" class="social-share-btn">
-        <i class="icon-bullhorn icon-alpha75"></i>
-        {% trans "Share" %}
+        <i class="icon-bullhorn icon-alpha75"></i>{% trans "Share" %}
       </a>
     </li>
   {% endif %}
