--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -266,6 +266,55 @@
 }
 
 
+/*
+    Dialog
+*/
+@keyframes social-opacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.edit-item-dialog.preloader:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(51, 51, 51, 0.3);
+    -webkit-animation: social-opacity 0.1s forwards linear;
+    -o-animation: social-opacity 0.1s forwards linear;
+    animation: social-opacity 0.1s forwards linear;
+}
+
+.edit-item-dialog.preloader:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    background: url(../img/preloader.svg) no-repeat center;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-animation: social-opacity 0.1s forwards linear;
+    -o-animation: social-opacity 0.1s forwards linear;
+    animation: social-opacity 0.1s forwards linear;
+}
+
+.edit-item-dialog form {
+    margin: 0;
+}
+
 .edit-item-dialog input, .edit-item-dialog textarea {
     width: 100%;
     -webkit-box-sizing: border-box;
@@ -291,22 +340,4 @@
 
 .edit-item-dialog .invalid input, .edit-item-dialog .invalid textarea {
     border-color: red;
-}
-
-.edit-item-dialog .ok-btn {
-    min-width: 68px;
-    color: white;
-    font-weight: bold;
-    background-color: #49afcd;
-    background-image: -moz-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#5bc0de), to(#2f96b4));
-    background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: -o-linear-gradient(top, #5bc0de, #2f96b4);
-    background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
-    background-repeat: repeat-x;
-}
-
-.edit-item-dialog .ok-btn:hover {
-    background-image: -webkit-linear-gradient(top, #71b1d7, #4f9dce);
-    background-image: linear-gradient(to bottom, #71b1d7, #4f9dce)
 }
