--- a/src/apps_common/mailerlite/static/mailerlite/admin/css/upload_csv.css
+++ b/src/apps_common/mailerlite/static/mailerlite/admin/css/upload_csv.css
@@ -1,9 +1,9 @@
-.ui-dialog.upload-csv-dialog h3 {
+.upload-csv-dialog h3 {
     margin-top: 10px;
     text-align: center;
 }
 
-.ui-dialog.upload-csv-dialog h3:before {
+.upload-csv-dialog h3:before {
     content: '';
     display: block;
     margin: 0 auto;
