--- a/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
+++ b/src/apps_common/social_networks/static/social_networks/admin/css/autopost.css
@@ -7,7 +7,7 @@
     }
 }
 
-.ui-dialog.autopost-preload:before {
+.ui-dialog.preloader:before {
     content: '';
     position: absolute;
     left: 0;
@@ -21,7 +21,7 @@
     animation: social-opacity 0.1s forwards linear;
 }
 
-.ui-dialog.autopost-preload:after {
+.ui-dialog.preloader:after {
     content: '';
     position: absolute;
     left: 50%;
