--- a/src/apps_common/seo/templates/seo/admin/robots_include.html
+++ b/src/apps_common/seo/templates/seo/admin/robots_include.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="alert alert-info">
-  <p>Example:</p>
+  <p>{% trans 'Example' %}:</p>
 <pre>
 User-agent: *
 Host: www.mywebsite.com
