--- a/src/apps_common/menu/static/menu/scss/main_menu.scss
+++ b/src/apps_common/menu/static/menu/scss/main_menu.scss
@@ -14,6 +14,10 @@ $mobile_active_color: $menu_active_color;
 .menu {
   @include no_fontsize;
 
+  ul {
+    margin: 0 -5px;
+  }
+
   li {
     color: $menu_text_color;
 
