underline + ckeditor dblclick

--- a/src/static/scss/mixins/_all.scss
+++ b/src/static/scss/mixins/_all.scss
@@ -11,5 +11,6 @@
 @import "placeholder";
 @import "rel_background";
 @import "sharp_image";
+@import "underline";
 @import "unselectable";
 @import "valign";
