--- a/src/apps/contacts/templates/contacts/block.html
+++ b/src/apps/contacts/templates/contacts/block.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div id="contact-us" class="block">
+<div class="contact-block block">
   <div class="grid-block">
     {% if block.header %}
       <div class="title-h1">{{ block.header }}</div>
