--- a/src/static/scss/mixins/_flex_columns.scss
+++ b/src/static/scss/mixins/_flex_columns.scss
@@ -24,7 +24,12 @@
   }
 
   @if ($margin-right) {
-    max-width: calc(#{$max_basis} - #{(($columns - 1) * $margin-right) / $columns});
+    @if (str_index(#{$margin-right}, '%')) {
+      max-width: #{$max_basis - (($columns - 1) * $margin-right) / $columns};
+    } @else {
+      max-width: calc(#{$max_basis} - #{(($columns - 1) * $margin-right) / $columns});
+    }
+
     margin-right: $margin-right;
     &:nth-of-type(#{$columns}n) {
       margin-right: 0;
