--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -80,7 +80,7 @@ input[type=number] {
 }
 
 // правка иконок related
-.inline-group .related-widget-wrapper-link {
+.control-group .related-widget-wrapper-link {
   margin: 0 0 0 10px;
   padding: 4px;
   width: 14px;
