popup overlay preloader

--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -24,7 +24,7 @@ $content_paddings: (
     (0, $media480): 20px 20px 36px,
 );
 
-// цвет фона
+// цвет фона окна
 $background_color: $white;
 
 // кнопка закрытия
