fix pycharm warnings

--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -54,7 +54,7 @@
              style="width:{{ admin_item_size.0 }}px; height:{{ admin_item_size.1 }}px;">
 
           <a target="_blank" class="item-preview" style="display:none;">
-            <img/>
+            <img src=""/>
           </a>
 
           <div class="item-preloader">
@@ -82,7 +82,7 @@
 
           <a target="_blank" class="item-preview" style="display:none;">
             <span class="inner">
-              <img/>
+              <img src=""/>
             </span>
           </a>
 
