--- a/src/libs/file_field/static/file_field/admin/css/file_widget.css
+++ b/src/libs/file_field/static/file_field/admin/css/file_widget.css
@@ -5,7 +5,7 @@
 }
 
 /* прячем оригинальное поле */
-.file-widget input {
+.file-widget input[type="file"] {
     position: absolute;
     top: 0;
     left: -5000px;
@@ -22,7 +22,8 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
+    line-height: 14px;
     text-align: left;
     vertical-align: middle;
 }
@@ -33,20 +34,20 @@
 }
 
 .file-widget label span {
-    overflow: hidden;
-    width: 90px;
-    -ms-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    vertical-align: top;
-}
-
-/* ссылка на файл */
-.file-widget .preview {
     display: inline-block;
     position: relative;
-    padding: 5px 7px 5px 12px;
-    margin-left: -35px;
-    z-index: 0;
+    overflow: hidden;
+    min-width: 65px;
+    max-width: 200px;
+    vertical-align: top;
+    text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+}
+
+.file-widget .action-btn {
+    display: inline-block;
+    position: relative;
+    margin-left: -37px;
     vertical-align: middle;
     -webkit-border-radius: 0 7px 7px 0;
     -moz-border-radius: 0 7px 7px 0;
@@ -56,6 +57,12 @@
     -ms-transition: margin-left 0.2s;
     -o-transition: margin-left 0.2s;
     transition: margin-left 0.2s;
+}
+
+/* ссылка на файл */
+.file-widget .preview {
+    padding: 5px 7px 5px 14px;
+    z-index: 1;
 }
 
 .file-widget .preview:before {
@@ -68,6 +75,20 @@
 }
 
 .file-widget.has-link .preview {
+    margin-left: -7px;
+}
+
+/* чекбокс удаления */
+.file-widget .clear {
+    padding: 4px 7px 4px 14px;
+    min-height: 18px;
+}
+
+.file-widget .clear input {
+    -moz-transform: scale(0.82);
+}
+
+.file-widget.has-link .clear {
     margin-left: -7px;
 }
 
