--- a/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
+++ b/src/apps_common/ckeditor/static/ckeditor/admin/css/ckeditor.css
@@ -52,26 +52,26 @@ ul, ol {
 
 li {
     position: relative;
-    padding: 3px 0 3px 16px;
+    padding: 3px 0 3px 0;
     z-index: 1;
 }
 
 ul {
     list-style: none;
 }
+ul li {
+    padding-left: 24px;
+}
 ul li:before {
     content: '●';
     position: absolute;
-    left: 0.2em;
+    left: 1em;
     top: 0.33em;
     font-size: 0.8em;
 }
 
 ol {
-    padding-left: 16px;
-}
-ol li {
-    padding-left: 0;
+    padding-left: 24px;
 }
 
 /* fix styles combo */
