youtube api widget

--- a/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
+++ b/src/apps_common/gallery/static/gallery/scss/gallery_popup.scss
@@ -136,7 +136,7 @@ $close_btn_weight: 2px;
       }
     }
 
-    .vimeo-placeholder {
+    div.vimeo-placeholder, div.youtube-placeholder {
       position: absolute;
       left: 0;
       top: 0;
