--- a/src/libs/form_helper/templates/form_helper/field.html
+++ b/src/libs/form_helper/templates/form_helper/field.html
@@ -11,7 +11,9 @@
 
   {% block errors %}
     {% if field_errors %}
-      <span class="error">{{ field_errors|first }}</span>
+      <div class="error">
+        <span>{{ field_errors|first }}</span>
+      </div>
     {% endif %}
   {% endblock %}
 </div>
