--- a/src/apps/search/templates/search/search.html
+++ b/src/apps/search/templates/search/search.html
@@ -1,21 +1,50 @@
+{% extends 'layout.html' %}
+
+{% load pipeline_plus %}
+{% load form_helper %}
+{% load paginator %}
 {% load i18n %}
 
-<h2>{% trans 'Search' %}</h2>
-
-<form method="get" action=".">
-  <input type="search" name="q" value="{{ query|default:'' }}">
-  <button type="submit" class="btn">{% trans 'Search' %}</button>
-</form>
+{% block static_head %}
+  {{ block.super }}
+  {% stylesheet 'search' %}
+{% endblock static_head %}
 
 
-{% if query %}
-  <h3>{% trans 'Results' %}</h3>
+{% block content %}
+  <div class="grid-block block">
+    <h2>{% trans 'Search' %}</h2>
 
-  <ol>
-    {% for result in queryset %}
-      <li>
-        <a href="{{ result.url }}">{{ result.title }}</a>
-      </li>
-    {% endfor %}
-  </ol>
-{% endif %}
+    <form method="get" action=".">
+      {% render_form form %}
+      <button type="submit" class="btn">{% trans 'Search' %}</button>
+    </form>
+  </div>
+
+  {% if paginator %}
+    <div id="results">
+      <div class="grid-block">
+        <div class="text-styles">
+          <h3>{% trans 'Results:' %}</h3>
+
+          <ol>
+            {% for item in paginator.current_page %}
+              <li>
+                <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
+              </li>
+            {% endfor %}
+          </ol>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+
+  {% if paginator.num_pages > 1 %}
+    <div id="paginator">
+      {% paginator paginator %}
+    </div>
+  {% endif %}
+
+
+{% endblock content %}
+
