--- a/src/apps/search/templates/search/result.html
+++ b/src/apps/search/templates/search/result.html
@@ -7,42 +7,40 @@
 
 {% block static_head %}
   {{ block.super }}
-  {% stylesheet 'search' %}
+  {% stylesheet 'search_result' %}
 {% endblock static_head %}
 
 
 {% block content %}
-  <div class="grid-block block">
-    <h2>{{ title }}</h2>
-
-    <form method="get" action=".">
-      {% render_form form %}
-      <button type="submit" class="btn">{% trans 'Search' %}</button>
-    </form>
-  </div>
-
-  <div id="results">
+  <div id="search-results" class="block">
     <div class="grid-block">
-      <div class="text-styles">
-        <h3>{% trans 'Results:' %}</h3>
+      <h2>{{ title }}</h2>
 
-        <ol>
-          {% for item in paginator.current_page %}
-            <li>
-              <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
-            </li>
-          {% endfor %}
-        </ol>
+      <form method="get" action=".">
+        {% render_form form %}
+        <button type="submit" class="btn">{% trans 'Search' %}</button>
+      </form>
+    </div>
+
+    <div id="records" class="grid-block">
+      <h3>{% trans 'Results:' %}</h3>
+
+      <ol start="{{ paginator.current_page.start_index }}">
+        {% for item in paginator.current_page %}
+          <li>
+            <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
+          </li>
+        {% endfor %}
+      </ol>
+    </div>
+
+    {% if paginator.num_pages > 1 %}
+      <div id="paginator">
+        <div class="grid-block">
+          {% paginator paginator %}
+        </div>
       </div>
-    </div>
+    {% endif %}
   </div>
-
-  {% if paginator.num_pages > 1 %}
-    <div id="paginator">
-      {% paginator paginator %}
-    </div>
-  {% endif %}
-
-
 {% endblock content %}
 
