client_ip geocity

--- a/src/static/scss/mixins/crossbrowser/_reset.scss
+++ b/src/static/scss/mixins/crossbrowser/_reset.scss
@@ -107,6 +107,11 @@
       margin: 0;
     }
   }
+  input[type="search"] {
+    &::-webkit-search-cancel-button {
+      display: none;
+    }
+  }
   button::-moz-focus-inner {
     border: none;
     padding: 0;
